--- a/templates/join_tournament.html
+++ b/templates/join_tournament.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>MNCU</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body class="bg-black text-white">
@@ -13,8 +13,8 @@
                 <a href="{% url 'team:view_tournament'%}"><img src="https://cdn.discordapp.com/attachments/1061685560835571772/1095791422751391945/273029c8-e33c-4f49-93e6-2f70f7ef6f2d.jpg" class="img-thumbnail rounded-4" alt="..." style="height: 80px;" ></a>
             </div>
             <div class="col-4 text-center">
-                <h2>Liga de plata</h2>
-                <h6>Esta es una liga para elo menor a 1100</h6>
+                <h2>{{tournament.name}}</h2>
+                <h6>{{ tournament.description }}</h6>
             </div>
         </div>
         <div class="row my-3">
