se agregan daatos

--- a/templates/grand_tournament.html
+++ b/templates/grand_tournament.html
@@ -19,21 +19,17 @@
         </div>
         <div class="row mt-3">
             {% for general  in list_tournaments_total %}
-                <div class="col-3  border-end mx-auto">
+                <div class="col-4  border-end mx-auto">
                     <h5>{{general.tournament}}</h5>
                     {% for tg in general.tabla_general %}
-                            <p style="font-size: x-small;" >{{ tg.lugar }}.-{{ tg.gamer }} : {{ tg.points }}</p>
+                            <p>{{ tg.lugar }}.-{{ tg.gamer }} : {{ tg.points }}</p>
                     {% endfor %}
                 </div>
-            {% endfor %}
-        </div>
-        <div class="row">
-            {% for general  in list_tournaments_total %}
-                <div class="col-3  border-end border-top mx-auto">
+                <div class="col-8  border-end border-top mx-auto">
                     {% for jornadas in general.jornadas %}
                         <h6>Jornada {{ forloop.counter }} </h6>
                         {% for jornada in jornadas %}
-                        <p style="font-size: x-small;" ><span class="badge text-bg-primary">{{jornada.wins_local_gamer}}</span> {{jornada.local_gamer}} - {{jornada.visitor_gamer}} <span class="badge text-bg-primary">{{jornada.wins_visitor_gamer}}</span></p>
+                        <p><span class="badge text-bg-primary">{{jornada.wins_local_gamer}}</span> {{jornada.local_gamer}} - {{jornada.visitor_gamer}} <span class="badge text-bg-primary">{{jornada.wins_visitor_gamer}}</span></p>
                         {% endfor %}
                     {% endfor %}
                 </div>
