se agregan daatos

--- a/templates/grand_tournament.html
+++ b/templates/grand_tournament.html
@@ -50,7 +50,7 @@
                                     {% for stream in  jornada.streams %}
                                     <h6>{{stream.description}}</h6>
                                     <h5>Streamer: {{stream.streamer}}</h5>
-                                    <iframe width="auto" height="80%" src="{{stream.link}}" frameborder="0" allowfullscreen></iframe>
+                                    <a href="{{stream.link}}" target="_blank" > ver</a>
                                     {% endfor %}
                                 </div>
                                 <div class="modal-footer">
